# prebuilt-build-tools

./: .gitattributes  .gitignore  CMakeLists.txt
BuildTools/: .scan-build.disable  AndroidSetting.sh  GenerateAndroidGradle.bat  GenerateAndroidGradle.sh  GenerateUnix-x64.sh  GenerateUnix-x86.sh  GenerateUnixGo.sh  GenerateVS2017-x64.bat  GenerateVS2017-x86.bat  GenerateVS2019-x64.bat  GenerateVS2019-x86.bat  MacSetting.sh  README.md
BuildTools/BuildThirdParty/: GenerateAndroid-UE.sh  GenerateAndroid.bat  GenerateAndroid.sh  GenerateAndroidGo.sh  GenerateMac-UE.sh  GenerateUnix-UE-x64.sh  GenerateUnix-x64.sh  GenerateUnix-x86.sh  GenerateUnixGo.sh  GenerateVS-UE.sh  GenerateVS2017-ARM.bat  GenerateVS2017-ARM64.bat  GenerateVS2017-x64.bat  GenerateVS2017-x86.bat  GenerateVS2019-ARM.bat  GenerateVS2019-ARM64.bat  GenerateVS2019-UE-x64.bat  GenerateVS2019-x64.bat  GenerateVS2019-x86.bat  GenerateVSGo.sh  LoadAndroidEnvs.sh  LoadCMakeEnvs.sh  LoadMacEnvs.sh
BuildTools/Dev/: build_android.sh  build_ios.sh  cmake_dev.bat  cmake_dev.sh  cmake_dev_utf8.bat  cmake_dev_utf8_win64.bat
BuildTools/Docs/: REPO_SOURCE.md
Platform/Android/: build.gradle  gradle.properties
Platform/Android/app/: build.gradle  proguard-rules.pro
Platform/Android/app/src/main/: AndroidManifest.xml
Platform/Android/app/src/main/cpp/: CMakeLists.txt  android_main.cpp  native_app_glue.cmake  vulkan_main.cpp
Platform/Android/app/src/main/res/values/: strings.xml
Platform/Android/gradle/wrapper/: gradle-wrapper.properties
ProjectConfig/CMake/: ProjectAddTarget.cmake  ProjectBuildOption.cmake  ProjectImportSetup.cmake  ProjectInstallConfig.cmake.in  ProjectInstallTarget.cmake  ProjectThirdPartyTarget.cmake
ProjectConfig/CMake/Compiler/: GCC.cmake  MSVC.cmake
ProjectConfig/CMake/TargetPlatform/: Windows.cmake
ThirdPartyBuildTools/: CMakeLists.txt  SetupCompactEnvs.cmake
ThirdPartyBuildTools/libatapp/: Build.cmake
ThirdPartyBuildTools/libcurl/: Build.cmake
ThirdPartyBuildTools/libressl/: Build.cmake
ThirdPartyBuildTools/libuv/: Build.cmake
ThirdPartyBuildTools/msgpack/: Build.cmake
ThirdPartyBuildTools/msys2/: Import.cmake
ThirdPartyBuildTools/openssl/: Build.cmake
ThirdPartyBuildTools/perl/: Build.cmake
ThirdPartyBuildTools/protobuf/: Build.cmake
